[package]
name = "tfreg"
description = "Registry serving terraform providers from github releases"
version = "0.1.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/mattclement/tfreg"

[dependencies]
anyhow = "1.0.57"
axum = { version = "0.6", features = ["headers"] }
axum-macros = "0.3"
futures = "0.3.21"
futures-util = "0.3"
oauth2 = { version = "4.2.0" }
# octocrab = { version = "0.19.0", features = ["rustls"] } # held back: https://github.com/XAMPPRocky/octocrab/issues/344
octocrab = { git = "https://github.com/XAMPPRocky/octocrab", rev = "7061b48c9bb799cb7effa0ecb8fd366a23f13de2", features = ["rustls"] }
reqwest = { version = "0.11.10", features = ["stream"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7.1"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7.2", features = ["io"] }
toml = "0.5.9"
tower-http = { version = "0.4", features = ["trace", "compression-full", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sequoia-openpgp = { version = "1.15.0", default-features = false, features = ["allow-experimental-crypto", "allow-variable-time-crypto", "crypto-rust"] }
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.10.0"
tracing-opentelemetry = "0.17.2"
clap = { version = "3.2.6", features = ["derive", "env"] }
thiserror = "1.0.31"
orion = "0.17.1"
base64 = "0.13.0"

[profile.release]
strip = "symbols"
lto = "thin"

[profile.dev]
opt-level = 1
