[package]
name = "tfreg"
description = "Registry serving terraform providers from github releases"
version = "0.1.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/mattclement/tfreg"

[dependencies]
anyhow = "1.0.57"
axum = { version = "0.6", features = ["headers"] }
axum-macros = "0.3"
futures = "0.3.21"
futures-util = "0.3"
oauth2 = { version = "4.2.0" }

# octocrab = { version = "0.19.0", features = ["rustls"] } 
octocrab = { git = "https://github.com/XAMPPRocky/octocrab", rev = "7061b48c9bb799cb7effa0ecb8fd366a23f13de2", features = ["rustls"] } # for fix in https://github.com/XAMPPRocky/octocrab/issues/344
reqwest = { version = "0.11.10", features = ["stream"], default-features = false }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7.1"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7.2", features = ["io"] }
toml = "0.7"
tower-http = { version = "0.4", features = ["trace", "compression-full", "fs"] }
sequoia-openpgp = { version = "1.15.0", default-features = false, features = ["allow-experimental-crypto", "allow-variable-time-crypto", "crypto-rust"] }
clap = { version = "3.2.6", features = ["derive", "env"] }
thiserror = "1.0.31"
orion = "0.17.1"
base64 = "0.21"

# Make sure these all use the same opentelemetry version
opentelemetry = { version = "0.18", features = ["rt-tokio"] }
tracing-opentelemetry = "0.18"
opentelemetry-otlp = "0.11"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[profile.release]
strip = "symbols"
lto = "thin"

[profile.dev]
opt-level = 1
